[gd_scene load_steps=2 format=3 uid="uid://dvo2xnboi4mg"]

[ext_resource type="Script" uid="uid://dpmwq4sb71xm6" path="res://main_menu_VM.gd" id="1_7rgf1"]

[node name="SceneRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7rgf1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="AntennasButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Antennas"

[node name="GSButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Glide Slope"

[node name="VORButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "VOR"

[node name="LighthouseButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Lighthouse"

[node name="AudioButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"

[connection signal="pressed" from="CenterContainer/VBoxContainer/AntennasButton" to="." method="_on_antennas_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GSButton" to="." method="_on_gs_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VORButton" to="." method="_on_vor_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LighthouseButton" to="." method="_on_lighthouse_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
